--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -134,7 +134,7 @@ In roher Form können Menschen diese Daten aber nur sehr schwer verarbeiten: Ein
 
 % Komposite InfoVis sind für den Benutzer gut, weil der mehr als eine Sicht auf die Daten hat. Für den Systembetreiber sind sie gut, weil...? Jeder macht, was er am besten kann?
 
-Bei komplexen Daten, die mehrere Variablen unterschiedlichen Typs beinhalten, ist es sinnvoll, mehrere Informationsvisualisierungen zu kombinieren \cite{Roberts2007, Pham2013, Waser2013}. Sie bieten verschiedene Sichten auf den Datensatz, beispielsweise eine Karte für die enthaltenen Länder und ein Balkendiagramm für die Entwicklung des BIP in den letzten Jahren. Auf diese Weise wird der Erkenntnisgewinn gefördert, da zum Beispiel sichtbar wird, dass Länder mit geringem BIP in ähnlichen Regionen liegen.
+Bei komplexen Daten, die mehrere Variablen unterschiedlichen Typs beinhalten, ist es sinnvoll, mehrere Informationsvisualisierungen zu kombinieren \cite{Roberts2007, Pham2013, Ribicic2013}. Sie bieten verschiedene Sichten auf den Datensatz, beispielsweise eine Karte für die enthaltenen Länder und ein Balkendiagramm für die Entwicklung des BIP in den letzten Jahren. Auf diese Weise wird der Erkenntnisgewinn gefördert, da zum Beispiel sichtbar wird, dass Länder mit geringem BIP in ähnlichen Regionen liegen.
 
 % komposite infovis sind mashups. die infovis stammen von verschiedenen entwicklern, schauen verschieden aus, haben verschiedene interaktionsmetaphern, unterschiedliches look and feel, unterschiedliche funktionen
 
@@ -770,7 +770,7 @@ Weave\footnote{\url{http://oicweave.org/}} ist eine Webapplikation, mit der Benu
 % gut: interaktivität, drag & drop zeug
 % schlecht: keine verlinkung
 
-Tableau\footnote{\url{http://www.tableausoftware.com/}} ist eine Desktopapplikation, mit der aus Tabellen oder Datenbanken Diagramme erstellt werden können. Es ist der kommerzielle Nachfolger von Polaris \cite{Stolte2000} und laut Gartner \cite{Gartner2013} unter den Marktführern im Bereich Business Intelligence Platforms. Tableau setzt das Prinzip von \enquote{Semantic Transparency} um, indem der Benutzer die zu visualisierenden Daten per Drag \& Drop auf dem Diagramm platziert. Die Software muss keine umfassenden Hilfestellungen zur \emph{Bedienung} anbieten, da der Benutzer hauptsächlich Daten an das Diagramm bindet und den Diagrammtyp wechselt. Jede Aktion hat einen sofort sichtbaren Effekt, welcher mit der Undo-Funktion rückgängig gemacht werden kann. Diese drei Eigenschaften von Tableau (Semantic Transparency, Effekt sofort sichtbar, Undo/Redo) machen es sehr interaktiv, ohne dabei den Benutzer zu frustrieren. Allerdings geht Tableau davon aus, dass der Benutzer die Daten und damit verbundenen Konzepte kennt und bietet diesbezüglich keine Hilfestellungen an.
+Tableau\footnote{\url{http://www.tableausoftware.com/}} ist eine Desktopapplikation, mit der aus Tabellen oder Datenbanken Diagramme erstellt werden können. Es ist der kommerzielle Nachfolger von Polaris \cite{Stolte2002} und laut Gartner \cite{Gartner2013} unter den Marktführern im Bereich Business Intelligence Platforms. Tableau setzt das Prinzip von \enquote{Semantic Transparency} um, indem der Benutzer die zu visualisierenden Daten per Drag \& Drop auf dem Diagramm platziert. Die Software muss keine umfassenden Hilfestellungen zur \emph{Bedienung} anbieten, da der Benutzer hauptsächlich Daten an das Diagramm bindet und den Diagrammtyp wechselt. Jede Aktion hat einen sofort sichtbaren Effekt, welcher mit der Undo-Funktion rückgängig gemacht werden kann. Diese drei Eigenschaften von Tableau (Semantic Transparency, Effekt sofort sichtbar, Undo/Redo) machen es sehr interaktiv, ohne dabei den Benutzer zu frustrieren. Allerdings geht Tableau davon aus, dass der Benutzer die Daten und damit verbundenen Konzepte kennt und bietet diesbezüglich keine Hilfestellungen an.
 
 % choosel
 % gut: drag n drop
